fix: Convert URL constructor to URI